--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ env/
 /Web_Scraping/article.json
 /Web_Scraping/Web_scraping.py
 /Web_Scraping/Web_scraping_3.py
+/Web_Scraping/Web_scraping_4.py
+/Shop/
+/Decorators/Lesson/
+/Iterators/Lesson/
